[gd_scene format=3 uid="uid://dfgkhn235i5ww"]

[ext_resource type="PackedScene" uid="uid://dhd5p1lp3cmre" path="res://scenes/enemy/enemy.tscn" id="1_pqlb4"]
[ext_resource type="Script" uid="uid://dh73incbfnk7a" path="res://scenes/enemies/golem/golem.gd" id="2_xkati"]
[ext_resource type="Texture2D" uid="uid://blw18u61xk0qy" path="res://assets/yeti_sheet.png" id="3_xkati"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hmegc"]
size = Vector2(46, 20)

[node name="golem" unique_id=544114418 instance=ExtResource("1_pqlb4")]
mass = 2.0
linear_damp = 4.0
angular_damp = 100.0
script = ExtResource("2_xkati")

[node name="CollisionShape2D" parent="." index="0" unique_id=1018922626]
position = Vector2(1, -2)
shape = SubResource("RectangleShape2D_hmegc")

[node name="Sprite2D" parent="." index="1" unique_id=1780433657]
position = Vector2(1, -24)
texture = ExtResource("3_xkati")
hframes = 6
vframes = 6

[node name="StateUpdate" type="Timer" parent="." index="2" unique_id=1914001966]
wait_time = 0.5
autostart = true

[node name="attackTimer" type="Timer" parent="." index="3" unique_id=600731031]
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="StateUpdate" to="." method="stateUpdate"]
[connection signal="timeout" from="attackTimer" to="." method="attackOver"]
